--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ intake-omnisci = { version = "^0.1.0", optional = true }
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
 pytest-clarity = "^1.0.1"
-black = {version = "^22.1.0", allow-prereleases = true}
+black = { version = "^22.1.0", allow-prereleases = true }
 seaborn = "^0.11.2"
 
 [tool.poetry.extras]
@@ -30,3 +30,51 @@ all = ["modin", "dask", "intake-omnisci"]
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+force_single_line = true
+atomic = true
+include_trailing_comma = true
+lines_after_imports = 2
+lines_between_types = 1
+use_parentheses = true
+src_paths = ["poetry", "tests"]
+skip_glob = ["*/setup.py"]
+filter_files = true
+known_first_party = "poetry"
+
+[tool.black]
+line-length = 88
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | test
+  | tests/.*/setup.py
+)/
+'''
+
+[tool.flake8]
+max-doc-length = 100
+max-line-length = 88
+docstring-convention = "google"
+ignore = ["E203", "W503", "W605"]
+
+[tool.pytest]
+script_launch_mode = "subprocess"
+
+[tool.pydocstyle]
+match = '.*\.py'
+
+[tools.mypy]
+plugins = "numpy.typing.mypy_plugin"
