--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ pytest-cov = "^3.0.0"
 pytest-clarity = "^1.0.1"
 black = { version = "^22.1.0", allow-prereleases = true }
 seaborn = "^0.11.2"
+isort = "^5.10.1"
+flake8 = "^4.0.1"
+blacken-docs = "^1.12.1"
+mypy = "^0.931"
+pydocstyle = "^6.1.1"
 
 [tool.poetry.extras]
 modin = ["modin"]
