--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,33 @@
 [tool.poetry]
-name = "pandas2tensorboard"
+name = "Pandas2TensorBoard"
 version = "0.1.0"
 description = "Pandas DataFrames converted to TensorBoard Format"
 authors = ["Anselm Hahn <Anselm.Hahn@gmail.com>"]
+maintainers = ["Anselm Hahn <Anselm.Hahn@gmail.com>"]
 license = "MIT"
+repository = "https://github.com/Anselmoo/pandas2tensorboard/"
+documentation = "https://github.com/Anselmoo/pandas2tensorboard/"
+homepage = "https://pypi.org/project/pandas2tensorboard/"
+keywords = ["tensorboard", "pandas", "machine learning", "visualizer"]
+classifiers = [
+  "Development Status :: 2 - Pre-Alpha",
+  "Intended Audience :: Science/Research",
+  "Intended Audience :: Developers",
+  "Intended Audience :: Education",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: MacOS",
+  "Operating System :: Unix",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Topic :: Database",
+  "Topic :: Scientific/Engineering :: Mathematics",
+  "Topic :: Scientific/Engineering :: Visualization",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
@@ -19,6 +43,7 @@ intake-omnisci = { version = "^0.1.0", optional = true }
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
 pytest-clarity = "^1.0.1"
+pytest-xdist = "^2.5.0"
 black = { version = "^22.1.0", allow-prereleases = true }
 seaborn = "^0.11.2"
 isort = "^5.10.1"
